<resources>
    <string name="app_name">Save it</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_article">Add Article</string>
    <string name="enter_url">Enter URL</string>
    <string name="category_name">Category Name</string>
    <string name="text_size">Text Size</string>
    <string name="no_saved_articles">No Saved Articles</string>
    <string name="no_favorite_articles">No favorite articles</string>
    <string name="welcome">Welcome,</string>
    <string name="these_are_your_saved_articles">These are your saved articles</string>
    <string name="save_head">Save Head</string>
    <string name="add_category">Add Category</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="change_font">Change Font</string>

    <string-array name="categories">
        <item>ALL</item>
        <item>BUSINESS</item>
        <item>TECH</item>
        <item>ECONOMICS</item>
        <item>POLITICS</item>
    </string-array>
</resources>
